--- a/openAPI_test.Rmd
+++ b/openAPI_test.Rmd
@@ -4,8 +4,15 @@ output: rmarkdown::github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_knit$set(root.dir='C:/work/201712_openapi/OpenAPI_test')
+require("knitr")
+opts_knit$set(root.dir='C:/work/201712_openapi/OpenAPI_test')
 ```
+
+대한민국 공공데이터 포털의 OpenAPI를 이용한 자료 수집 예제임.
+
+아래 코드는 네이버 블로그에서 가져옴   
+
+http://blog.naver.com/PostView.nhn?blogId=juhy9212&logNo=221007989739&redirect=Dlog&widgetTypeCall=true
 
 ```{r }
 #getwd()
@@ -44,15 +51,13 @@ require(data.table)
 total<-list()
 
 for(i in 1:length(urllist)){
-
   item <- list()
   item_temp_dt<-data.table()
     raw.data <- xmlTreeParse(urllist[i], useInternalNodes = TRUE,encoding = "utf-8")
   rootNode <- xmlRoot(raw.data)
   items <- rootNode[[2]][['items']]
-  
   size <- xmlSize(items)
-  
+ 
   for(j in 1:size){
     item_temp <- xmlSApply(items[[j]],xmlValue)
     item_temp_dt <- data.table( price = item_temp[1],
@@ -74,11 +79,11 @@ for(i in 1:length(urllist)){
   total[[i]] <- rbindlist(item)
  }
 
- seoul_apt_2017 <- rbindlist(total)
- a <- gsub(",","",seoul_apt_2017$price)
- a2 <- as.numeric(a)
+seoul_apt_2017 <- rbindlist(total)
+a <- gsub(",","",seoul_apt_2017$price)
+seoul_apt_2017$price_nm <- as.numeric(a)
+hist(seoul_apt_2017$price_nm)
 
-hist(log(a2))
 
 ```
 
